vlib/v/parser/tests/fn_attributes_duplicate_multiple.out
vlib/v/parser/tests/fn_attributes_duplicate_multiple.v:2:2: error: duplicate attribute `inline`
    1 | [inline]
    2 | [inline]
      |  ~~~~~~
    3 | fn foo() {}
    4 |
